2004-08-06 Anirban Bhattacharjee <banirban@novell.com>
	* decl.cs:
	* rootcontext.cs:
		Exception number made aligned to VB .net

2004-08-06 Anirban Bhattacharjee <banirban@novell.com>
	* class.cs: Improvements in the implementation of Implements clause in Type members

2004-08-05 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser,jay: Implements clause added to Event grammar

2004-08-05 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: Interface event declaration grammar rewritten

2004-08-04 Anirban Bhattacharjee <banirban@novell.com>
	* class.cs: Introduced check for valid interface name in Implements clause. 

2004-08-04  Jambunathan K  <kjambunathan@novell.com>
	* mb-tokenizer.cs: 
	* mb-parser.jay: 

	1) Fixed the Attributes grammar starting with
	   opt_attributes. Introduced new rules starting with
	   opt_global_attributes rule - section 5.2 of VB.NET spec

	2) Introduced new Tokens that correspond to reserved but unused
	   VB.NET keywords. Added some comments as appropriate in the
	   keywords hashtable of tokenizer - section 2.3 of VB.NET spec.

	3) Corrected 'imports_term' - section 6.3.1 & 6.3.2 of VB.NET
	   spec.

	4) Introduced opt_argument_list - section 5.2 of VB.NET spec

	5) Corrected namespace_declaration - section 6.4.1 of VB.NET spec
	

2004-08-04 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: Added support for modifiers and attributes in interface member grammar

2004-08-04 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: Property types made optional

2004-08-03 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: Interface method and property grammar got changed
			 Support for multiple implements in class 
	* interface.cs: Interface class has got changed
			All other interface types have been removed
	* class.cs: Property's Define and CheckBase method changed significantly to be in sync with Interface
	* pending.cs: few related changes 
	* attribute.cs: few related changes
