@@ -1,4 +1,8 @@
 2004-08-06 Anirban Bhattacharjee <banirban@novell.com>
+	* class.cs: Event still needed to have a constructor which takes value of Implements clause.
+	* mb-parser.jay: Passing Implements clause value to the constructor
+
+2004-08-06 Anirban Bhattacharjee <banirban@novell.com>
 	* decl.cs:
 	* rootcontext.cs:
 		Exception number made aligned to VB .net
